syntax = "proto3";

import "google/protobuf/timestamp.proto";

package me.tanawit.grpc;
option java_multiple_files = true;
option java_package = "me.tanawit.grpc";
option java_outer_classname = "AddressGuideProtos";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
  repeated PhoneNumber phoneNumbers = 4;
  google.protobuf.Timestamp last_updated = 5;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }
}

message AddressBook {
  repeated Person people = 1;
}

service AddressGuide {
  rpc GetAddressBook(Person) returns (AddressBook);
}
